- 
    
Bug
 - 
    Resolution: Done
 - 
    
P4: Low
 - 
    4.7.2, 5.7.0
 - 
    Windows XP, Windows 7
 
- 
        4b1d825ddcd1c116b158039e4772ee41c9785104 (qtbase/5.8, 23.1.2017.5.8.1)
 
When a modal dialog is shown via an ActiveQt control then it is not modal to the container. However a second dialog shown right after is modal.
- relates to
 - 
                    
QTBUG-26871 ActiveQt: QAxWidget in a modal dialog causes the dialog act like there was another modal dialog open.
-         
     - Closed
 
 -         
 - 
                    
QTSOLBUG-71 QWinWidget: When the application with a winwidget has the focus and the activating goes from and to the app, it loses the focus
-         
 - Closed
 
 -         
 - 
                    
QTBUG-57159 Window with WS_CHILD style can become an owner of an overlapped or pop-up window when reparented with SetWindowLongPtr(GWL_HWNDPARENT)
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-18099 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 180403,3 | QGuiApplication: Send QEvent::Window(Un)blocked to embedded window, too | 5.8 | qt/qtbase | Status: MERGED | -2 | 0 |